tests/outref/TBR000.ref
[ERROR]: ERR_YOTTADB: YottaDB error: 150372986,octoPlan1+4^%ydboctoP*,%YDB-E-GVSUBOFLOW, Maximum combined length of subscripts exceeded,%YDB-I-GVIS, 		Global variable: ^%ydbAIMDERzGTIrQTVBoOhdanoKcC7(1*
[ERROR]: ERR_YOTTADB: YottaDB error: 150373506,octoPlan1+4^%ydboctoP*,%YDB-E-NUMOFLOW, Numeric overflow
[ERROR]: ERR_YOTTADB: YottaDB error: 150373506,octoPlan1+8^%ydboctoP*,%YDB-E-NUMOFLOW, Numeric overflow
[ERROR]: ERR_DOLLAR_SYNTAX: Prepared statement dollar syntax (e.g. $1, $2, etc.) only supported in Rocto using the Extended Query Protocol
LINE 4:1: ...$111111111111111111111111111111111111111111111111111111111111111...
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
CREATE FUNCTION
CREATE FUNCTION
